tests/invalid/comprehension_if_float_from_str/main.py
def main() -> None:
    xs: list[int] = [i for i in range(3) if float("123")]
